# geolocating_cities_using_human_activity_traces

./: .gitignore  README.md  REUSE.toml  build.rb  build_config.yaml  index.html  pyproject.toml  references.bib  slider.lua  slides.md  test_slider.html  test_slider.md
.github/workflows/: main.yaml
assets/: after_body.html  custom.css  custom_header.html  helpers.css  nord_helpers.css
data/: boundary.geojson  map.geojson  threshold.csv
data/geojson/: bp_grid_eov.geojson  cub_grid_eov.geojson  map_around_cub.geojson
data/nasa/: .gitignore  README.md
data/weeplace/: .gitignore
data/yjmob100k/: README.md  daily_activity_1.csv  daily_activity_2.csv  port_messe_nagoya_activity.csv  yjmob100k-dataset1_sample.csv
figures/: threshold.rawgraphs
figures/geolocating/unstretched/: anchor_500_500.yaml
src/: budapest_blind.ipynb  clip_nasa_photo.ipynb  plot_for_presentation.ipynb  plot_grid.ipynb  plot_heatmaps.ipynb  plot_pannon_basin.ipynb  plot_port_messe_nagoya.ipynb  plotting_config.toml  qr_code.py  threshold_test.ipynb  visualize_noise_effect.ipynb
