[project]
name = "lcha_plotting"
version = "0.1.0"
description = "plotting code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "matplotlib>=3.10.6",
    "matplotlib-scalebar>=0.9.0",
    "osmnx>=2.0.6",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
