[project]
name = "lcha_plotting"
version = "0.1.0"
description = "plotting code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.6.2",
    "geopandas>=1.1.1",
    "h3>=4.3.1",
    "matplotlib>=3.10.6",
    "matplotlib-scalebar>=0.9.0",
    "osmnx>=2.0.6",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "rasterio>=1.4.3",
    "rioxarray>=0.19.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
